<?xml version="1.0"?>
<package format="2">
  <name>oculus_sonar</name>
  <version>0.0.0</version>
  <description>The oculus_sonar package</description>

  <!-- Example:  -->
  <maintainer email="kaibng@mail.ustc.edu.cn">cabinx</maintainer>

  <license>BSD</license>

  <author email="kaibng@mail.ustc.edu.cn">cabinx</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
